@@ -200,4 +200,9 @@
    <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
    <Categories>flags</Categories>
   </Asset>
+  <Asset file="zh.png" mimetype="image/png">
+   <_Description>Chinese</_Description>
+   <_Credits>Image taken from the CIA database http://www.cia.gov/</_Credits>
+   <Categories>flags</Categories>
+  </Asset>
 </AssetML>
