@@ -30,7 +30,7 @@ my %sections = (
 		"mk", 0,
 		"ml", 0,
 		"ms", 0,
-		"nl", 0,
+		"nl", 92,
 		"nb", 0,
 		"nn", 38,
 		"pa", 0,
@@ -74,7 +74,7 @@ my %rubriques = (
 		 "mk", 0,
 		 "ml", 0,
 		 "ms", 0,
-		 "nl", 0,
+		 "nl", 93,
 		 "nb", 0,
 		 "nn", 69,
 		 "pa", 0,
@@ -119,7 +119,7 @@ my %rubriques_all = (
 		 "mk", 0,
 		 "ml", 0,
 		 "ms", 0,
-		 "nl", 0,
+		 "nl", 94,
 		 "nb", 0,
 		 "nn", 70,
 		 "pa", 0,
