@@ -1,6 +1,6 @@
 2004-11-29  Klaus Ade Johnstad. <klaus@skolelinux.no>
 
-	* nb.po: Updated orwegian Bokm~l translation.
+	* nb.po: Updated Norwegian Bokm~l translation.
 
 2004-11-29  Adam Weinberger  <adamw@gnome.org>
 
