@@ -1,5 +1,14 @@
+2004-11-30  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/flags/gcompris_flags.assetml.in:
+	* boards/flags/zh.png:
+	* configure.in:
+	* docs/spipparser.pl:
+	* src/gcompris/config.c:
+
 2004-11-29  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	* configure.in: changed to release 6.4: release 6.4
 	* boards/wordsgame/wordslevel1.nb: created by Klaus Ade Johnstad.
 	* boards/wordsgame/wordslevel2.nb: - 
 	* boards/wordsgame/wordslevelmax.nb: -
